Add GitHub Actions workflow for documentation deployment
- Fix .gitignore to allow .github/workflows/ directory
- Add automated MkDocs build and deployment workflow
- Enable GitHub Pages with Actions source

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ flake.nix
 .codespellignore
 .codespellrc
 .devcontainer/
-.github/
+# Note: .github/workflows/ is needed for GitHub Actions
+.github/*
+!.github/workflows/
 .npmrc
 .prettierignore
 .prettierrc.toml
