--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,8 +29,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install mkdocs-material
-        pip install mkdocs-git-revision-date-localized-plugin
+        pip install -r requirements-docs.txt
         
     - name: Build documentation
       run: mkdocs build
