--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,54 +9,113 @@ theme:
   name: material
   palette:
     # Palette toggle for light mode
-    - scheme: default
-      primary: blue
-      accent: orange
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: deep purple
+      accent: amber
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     # Palette toggle for dark mode
-    - scheme: slate
-      primary: blue
-      accent: orange
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep purple
+      accent: amber
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
   features:
-    - navigation.tabs
-    - navigation.sections
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
+    - content.code.copy
+    - content.code.select
+    - content.tabs.link
+    - content.tooltips
+    - header.autohide
     - navigation.expand
+    - navigation.footer
+    - navigation.indexes
+    - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - navigation.prune
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.top
+    - navigation.tracking
     - search.highlight
     - search.share
-    - content.code.copy
-    - content.code.annotate
+    - search.suggest
+    - toc.follow
+    - toc.integrate
+  font:
+    text: Roboto
+    code: Roboto Mono
 
 plugins:
-  - search
+  - search:
+      separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - git-revision-date-localized:
       enable_creation_date: true
+      type: timeago
+  - minify:
+      minify_html: true
 
 markdown_extensions:
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:materialx.emoji.twemoji
   - pymdownx.highlight:
       anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.magiclink:
+      repo_url_shorthand: true
+      user: artvandelay
+      repo: codex-agentic-patterns
+  - pymdownx.mark
+  - pymdownx.smartsymbols
   - pymdownx.snippets
-  - pymdownx.superfences
-  - admonition
-  - pymdownx.details
-  - pymdownx.superfences
-  - attr_list
-  - md_in_html
-  - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+      combine_header_slug: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
 
 nav:
   - Home: index.md
   - Getting Started:
     - "📖 Start Here": learning-material/00-READ-ME-FIRST.md
     - "⚡ Quick Start": learning-material/QUICKSTART.md
+    - "🎓 Learning Guide": learning-material/START_HERE.md
     - "📚 Complete Index": learning-material/INDEX.md
     - "🎯 Exercises": learning-material/EXERCISES.md
   - Core Patterns:
@@ -64,7 +123,16 @@ nav:
     - "Pattern 2: Routing": learning-material/02-routing/README.md
     - "Pattern 3: Parallelization": learning-material/03-parallelization/README.md
     - "Pattern 5: Tool Use": learning-material/05-tool-use/README.md
+    - "Pattern 6: Planning": learning-material/06-planning/README.md
+    - "Pattern 7: Reflection": learning-material/07-reflection/README.md
+    - "Pattern 8: Memory Management": learning-material/08-memory-management/README.md
   - Advanced Patterns:
+    - "Pattern 10: MCP Integration": learning-material/10-mcp-integration/README.md
+    - "Pattern 12: Exception Handling": learning-material/12-exception-handling/README.md
+    - "Pattern 13: Human-in-the-Loop": learning-material/13-human-in-the-loop/README.md
+    - "Pattern 14: Knowledge Retrieval": learning-material/14-knowledge-retrieval/README.md
+    - "Pattern 15: Reasoning": learning-material/15-reasoning/README.md
+  - Production Patterns:
     - "Pattern 16: Sandbox Escalation": learning-material/16-sandbox-escalation/README.md
     - "Pattern 17: Turn Diff Tracking": learning-material/17-turn-diff-tracking/README.md
     - "Pattern 18: Rollout System": learning-material/18-rollout-system/README.md
@@ -78,14 +146,26 @@ nav:
     - "✅ Completion Report": learning-material/COMPLETION_REPORT.md
 
 extra:
+  homepage: https://artvandelay.github.io/codex-agentic-patterns/
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/artvandelay/codex-agentic-patterns
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/your-username
-  analytics:
-    provider: google
-    property: G-XXXXXXXXXX  # Replace with your Google Analytics ID
+      name: View on GitHub
+    - icon: fontawesome/solid/book
+      link: https://docs.google.com/document/d/1rsaK53T3Lg5KoGwvf8ukOUvbELRtH-V0LnOIFDxBryE/preview
+      name: Original Textbook
+    - icon: fontawesome/solid/code
+      link: https://github.com/openai/codex
+      name: OpenAI Codex CLI
+  generator: false
+  status:
+    new: Recently added
+    deprecated: Deprecated
+  tags:
+    AI Agents: ai-agents
+    Python: python
+    Production: production
+    Advanced: advanced
 
 copyright: |
   Copyright &copy; 2025 Codex Agentic Patterns Contributors<br>
