Fix 404 errors by moving learning materials into docs directory
- Move learning-material/ into docs/ where MkDocs expects content
- Set docs_dir: docs in mkdocs.yml
- All navigation links should now work correctly
- Fixes 404 errors on all pages except homepage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://artvandelay.github.io/codex-agentic-patterns/
 repo_url: https://github.com/artvandelay/codex-agentic-patterns
 repo_name: artvandelay/codex-agentic-patterns
 edit_uri: edit/main/
+docs_dir: docs
 
 theme:
   name: material
