Add Context backstory section
- Add 'Context' to navigation explaining how the project came to be
- Tell the story: reading agentic book → found Codex in Rust → used Cursor to extract patterns
- Emphasize this bridges theory (textbook) with production reality (Codex) via Python
- Position as grounded textbook with real production patterns, not toy examples

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,6 +119,7 @@ validation:
 
 nav:
   - Home: index.md
+  - Context: context.md
   - Chapter 1 - Prompt Chaining: learning-material/01-prompt-chaining/README.md
   - Chapter 2 - Routing: learning-material/02-routing/README.md
   - Chapter 3 - Parallelization: learning-material/03-parallelization/README.md
